rust/kcl-lib/src/frontend/trim/snapshots/kcl_lib__frontend__trim__tests__test_trim_arc2_left_side.snap
---
source: kcl-lib/src/frontend/trim/tests.rs
expression: result_normalized
---
sketch(on = YZ) {
  arc1 = arc(start = [var 0mm, var 5mm], end = [var 0mm, var -5mm], center = [var 30mm, var 0mm])
  arc2 = arc(
    start = [var 5mm, var 0mm],
    end = [
      var -0.4110350074224378mm,
      var 0.4110350074224378mm
    ],
    center = [var 0mm, var -30mm],
  )
  coincident([arc2.end, arc1])
}
