rust/kcl-lib/src/frontend/trim/snapshots/kcl_lib__frontend__trim__tests__test_trim_arc_start_coincident_with_line_segment.snap
---
source: kcl-lib/src/frontend/trim/tests.rs
expression: result_normalized
---
sketch001 = sketch(on = YZ) {
  line6 = line(
    start = [
      var 0.879975336296153mm,
      var 3.429575146649769mm
    ],
    end = [
      var 1.869999849965931mm,
      var 3.429575146649769mm
    ],
  )
  line7 = line(
    start = [
      var 1.869999849965931mm,
      var 3.429575146649769mm
    ],
    end = [
      var 1.869999849965931mm,
      var 2.21999981159307mm
    ],
  )
  line8 = line(
    start = [
      var 1.869999849965931mm,
      var 2.21999981159307mm
    ],
    end = [
      var 0.3295809187900969mm,
      var 2.21999981159307mm
    ],
  )
  line9 = line(
    start = [
      var 0.3295809187900969mm,
      var 2.21999981159307mm
    ],
    end = [
      var 0.3295809187900968mm,
      var 2.9079736991370564mm
    ],
  )
  coincident([line6.end, line7.start])
  coincident([line7.end, line8.start])
  coincident([line8.end, line9.start])
  parallel([line7, line9])
  parallel([line8, line6])
  perpendicular([line6, line7])
  horizontal(line8)
  arc2 = arc(
    start = [
      var 0.879975336296153mm,
      var 3.429575146649769mm
    ],
    end = [
      var 0.32958091879009715mm,
      var 2.86626019768983mm
    ],
    center = [
      var 0.8717011589433016mm,
      var 2.8871169484305774mm
    ],
  )
  coincident([arc2.end, line9])
  coincident([line9.end, arc2])
  coincident([line6.start, arc2.start])
}
