rust/kcl-lib/src/frontend/trim/snapshots/kcl_lib__frontend__trim__tests__test_trim_circle_case_1_1_circle_to_arc_trimmed_without_start_point_side.snap
---
source: kcl-lib/src/frontend/trim/tests.rs
expression: result_normalized
---
sketch001 = sketch(on = YZ) {
  line1 = line(start = [var -0.56mm, var 2.8mm], end = [var -3.58mm, var -0.78mm])
  arc1 = arc(
    start = [
      var -1.0412410311102442mm,
      var 2.2295222213991144mm
    ],
    end = [
      var -2.8764523425814517mm,
      var 0.05400682568158999mm
    ],
    center = [var -1.53mm, var 0.78mm],
  )
  coincident([arc1.start, line1])
  coincident([arc1.end, line1])
}
