rust/kcl-lib/src/frontend/trim/snapshots/kcl_lib__frontend__trim__tests__test_trim_circle_case_1_3_trim_line_to_be_coincident_with_circle.snap
---
source: kcl-lib/src/frontend/trim/tests.rs
expression: result_normalized
---
sketch001 = sketch(on = YZ) {
  circle1 = circle(start = [var -2.67mm, var 1.8mm], center = [var -1.53mm, var 0.78mm])
  line1 = line(
    start = [
      var -1.0412410311102442mm,
      var 2.2295222213991144mm
    ],
    end = [var -3.58mm, var -0.78mm],
  )
  coincident([line1.start, circle1])
}
