rust/kcl-lib/src/frontend/trim/snapshots/kcl_lib__frontend__trim__tests__test_trim_circle_case_2_convert_circle_to_arc_between_two_segments.snap
---
source: kcl-lib/src/frontend/trim/tests.rs
expression: result_normalized
---
sketch001 = sketch(on = YZ) {
  line1 = line(start = [var -0.75mm, var 2.93mm], end = [var -2.97mm, var -1.17mm])
  line2 = line(start = [var -0.1mm, var 2.46mm], end = [var -0.67mm, var 0.97mm])
  arc1 = arc(
    start = [
      var -1.1166748864887253mm,
      var 2.2528076420703727mm
    ],
    end = [
      var -0.3639264220101984mm,
      var 1.7700870722891304mm
    ],
    center = [var -1.53mm, var 0.78mm],
  )
  coincident([arc1.start, line1])
  coincident([arc1.end, line2])
}
