rust/kcl-lib/src/frontend/trim/snapshots/kcl_lib__frontend__trim__tests__test_trim_delete_both_segments.snap
---
source: kcl-lib/src/frontend/trim/tests.rs
expression: "result_normalized"
---
sketch(on = YZ) {
}
